2005-12-22  Ito Kazumitasu  <kaz@maczuka.gcd.org>

	* gnu/testlet/java/lang/Class/newInstance.java: Reverted.

2005-12-21  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/SingleTestHarness.java: New file.

2005-12-20  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/javax/swing/plaf/basic/BasicLookAndFeel/initComponentDefaults.java:
	Added more detailed tests for focusInputMaps.

2005-12-20  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/text/DefaultStyledDocument/ElementBuffer/ElementStructure3.java: Added another check to this test and also added a 
	harness.debug statement for an exception we're throwing now that we 
	shouldn't be.

2005-12-20  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/text/DefaultStyledDocument/ElementBuffer/ElementStructure3.java: Added more checks to this test.

2005-12-20  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/javax/swing/plaf/basic/BasicLookAndFeel/initComponentDefaults.java:
	Added checks for TextArea.focusInputMap, TextField.focusInputMap, TextPane.focusInputMap,
	and PasswordField.focusInputMap.

2005-12-20  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/text/AttributeSet: New directory.
	* gnu/testlet/javax/swing/text/AttributeSet/isEqual.java: New test.

2005-12-20  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/text/DefaultStyledDocument/ElementBuffer/ElementStructure3.java: New test.

2005-12-20  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/text/DefaultStyledDocument/ElementBuffer/ElementStructure2.java: New test.

2005-12-21  Raif S. Naffah  <raif@swiftdsl.com.au>

	* .externalToolBuilders/MauveBatchRunLaunch: new Eclipse Builder
	* batch_run
	  (CLASSPATHBCP): new env variable.
	  (COMPILER): redefined using CLASSPATHBCP.

2005-12-20  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/text/DefaultStyledDocument/ElementBuffer/ElementStructure1.java: New test.
