@@ -1,3 +1,8 @@
+2005-12-20  Lillian Angel  <langel@redhat.com>
+
+	* gnu/testlet/javax/swing/plaf/basic/BasicLookAndFeel/initComponentDefaults.java:
+	Fixed a couple of typos.
+
 2005-12-22  Ito Kazumitasu  <kaz@maczuka.gcd.org>
 
 	* gnu/testlet/java/lang/Class/newInstance.java: Reverted.
